<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Launch Fragment -->
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="political_preparedness_logo">Political Preparedness Logo</string>

    <!-- Election Fragment -->
    <string name="loading_elections">Loading Elections</string>
    <string name="saved_elections">Saved Elections</string>

    <!-- VoterInfo Fragment -->
    <string name="correspondence_address">Correspondence Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="election_information">Election Information</string>
    <string name="loading_election_information">Loading Election Information</string>
    <string name="loading_correspondence_address">Loading Correspondence Address</string>


    <!-- Representative Fragment-->
    <string name="settings">Settings</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="use_my_location">Use My Location</string>
    <string name="enable_location">Location\nSettings</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="loading_representatives">Loading Representatives</string>
    <string name="representative_photo">Representative Photo</string>
    <string name="webpage_icon">Webpage Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="twitter_icon">Twitter Icon</string>

    <!-- Incomplete Form messages -->
    <string name="form_missing_city">Please fill the City name</string>
    <string name="form_missing_street">Please fill the Street name</string>
    <string name="form_missing_street_number">Please fill the Street Number</string>
    <string name="form_missing_state">Please select a State</string>
    <string name="form_missing_zip">Please fill the Zip Code</string>

    <!-- Missing VoterInfo Data messages-->
    <string name="missing_voting_locations">Missing voting locations URL</string>
    <string name="missing_ballot_information">Missing ballot information URL</string>
    <string name="missing_address">Missing Correspondence Address</string>
    <string name="missing_url">Missing URL!!</string>

    <!-- Error messages -->
    <string name="missing_location_permissions">Could not get the current location due to missing permissions</string>
    <string name="could_not_convert_location">Could not convert your location to an Address.</string>
    <string name="error_reading_location_data">There was an error reading data from your location: %s</string>
    <string name="device_location_ioexception">An IOException was thrown when trying to get the device\'s location!!</string>
    <string name="error_location_settings_resolution">Error getting location settings resolution</string>
    <string name="could_not_fetch_elections">Could not fetch Elections from the API!!\n Error code: %d</string>
    <string name="could_not_fetch_voter_info">Could not fetch VoterInfo from the API!!\n Error code: %d</string>
    <string name="could_not_fetch_representatives">Could not fetch Representatives from the API!!\n Error code: %d</string>
    <string name="location_needed">Location services must be enabled for this functionality.</string>
    <string name="missing_election">The election could not be loaded!!</string>
    <string name="missing_state">Election\'s State could not be loaded!!</string>
</resources>
