<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/padding_normal"
        app:layoutDescription="@xml/representative_motion_scene">

        <TextView
            android:id="@+id/search_title"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintBottom_toTopOf="@id/address_line_1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/street"
            android:inputType="textPostalAddress"
            android:singleLine="true"
            android:text="@={viewModel.address.line1}"
            app:layout_constraintBottom_toTopOf="@id/address_line_2"
            app:layout_constraintTop_toBottomOf="@id/search_title"
            tools:text="Amphitheatre Parkway" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/number"
            android:inputType="textPostalAddress"
            android:singleLine="true"
            android:text="@={viewModel.address.line2}"
            app:layout_constraintBottom_toTopOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/address_line_1"
            tools:text="1600" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:singleLine="true"
            android:text="@={viewModel.address.city}"
            app:layout_constraintBottom_toTopOf="@id/zip"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2"
            tools:text="Mountain View" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            app:stateValue="@{viewModel.address.state}" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/zip_code"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true"
            android:text="@={viewModel.address.zip}"
            app:layout_constraintBottom_toTopOf="@id/button_search"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            tools:text="94043" />

        <Button
            android:id="@+id/button_search"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toTopOf="@id/button_location"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintBottom_toTopOf="@id/representative_title"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/representative_title"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives"
            app:layout_constraintBottom_toTopOf="@id/representative_list"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/loading_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/loading_representatives"
            android:src="@drawable/loading_animation"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/representative_list"
            app:layout_constraintTop_toTopOf="@id/representative_list" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>