<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/padding_default"
            android:singleLine="true"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.election.name}"
            tools:title="Oklahoma Election" />

        <!-- TODO: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@{viewModel.election.electionDay.toLocaleString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/election_information"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:onClick="@{() -> viewModel.onUrlClick(viewModel.state.electionAdministrationBody.votingLocationFinderUrl)}"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:stateLocationText="@{viewModel.state}"
            tools:text="@string/voting_locations" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:onClick="@{() -> viewModel.onUrlClick(viewModel.state.electionAdministrationBody.ballotInfoUrl)}"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:stateBallotText="@{viewModel.state}"
            tools:text="@string/ballot_informations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/correspondence_address"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginHorizontal="@dimen/margin_normal"
            app:addressText="@{viewModel.state}"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Po Box 53156\nOklahoma City, Oklahoma 73152" />

        <!-- TODO: Add button to save election to Room -->

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:onClick="@{() -> viewModel.onFollowClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:saveButtonText="@{viewModel.election}"
            tools:text="@string/follow_election"
            style="@style/ButtonStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>